crates/cribo/tests/snapshots/bundled_code@forward_reference_from_parent_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_from_parent_init/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _ModuleType=_cribo.types.ModuleType, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False) or _getattr(module, '_cribo_failed_life', False) or _getattr(module, '__initialized__', False) and _getattr(module, '_cribo_registered', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _ModuleType(spec.name)
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                fresh._cribo_fresh_life = True
                return fresh
            return module
        module = _ModuleType(spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _getattr=getattr, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        record_snapshot = not _getattr(module, '_cribo_fresh_life', False) and not _getattr(module, '__initialized__', False) and (self._namespace is not None or self._entry[1] is not None)
        if init is None:
            if record_snapshot and key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if record_snapshot and key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
                module._cribo_failed_life = True
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._registry = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        entry = init, namespace, is_package, exports or {}
        self._targets[name] = entry
        self._registry[name] = entry

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None, *, _getattr=getattr, _globals=globals):
        entry = self._targets.get(name)
        if entry is None:
            return None
        parent_name = name.rpartition('.')[0]
        if parent_name:
            parent = _sys.modules.get(parent_name)
            expected = self._namespaces.get(parent_name)
            if expected is None:
                parent_entry = self._registry.get(parent_name)
                if parent_entry is not None and parent_entry[1] is not None:
                    expected = _globals().get(parent_entry[1])
            if parent is not None and expected is not None and parent is not expected and not _getattr(parent, '_cribo_fresh_life', False) and not _getattr(parent, '_cribo_machinery_loaded', False):
                return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
_cribo_finder_local._registry = _cribo_finder._registry
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('parent', '_cribo_init___cribo_710264_parent', 'parent', True)
_cribo_finder.register('parent.subpkg', '_cribo_init___cribo_0ac738_parent_subpkg', 'parent_subpkg', True)
_cribo_finder.register('parent.base', None, None, False, {'BaseClass': 'BaseClass'})
_cribo_finder.register('parent.another', None, None, False, {'AnotherClass': 'AnotherClass'})
_cribo_finder.register('parent.child', None, None, False, {'MyClass': 'MyClass', 'helper_function': 'helper_function'})
_cribo_finder.register('parent.subpkg.submodule', None, None, False, {'SubpkgClass': 'SubpkgClass'})
parent_base = _cribo.types.SimpleNamespace(__name__='parent.base', __doc__='Base module defining base classes.')
parent = _cribo.types.SimpleNamespace(__name__='parent', __initializing__=False, __initialized__=False, __path__=[])
parent.base = parent_base
"""Base module defining base classes."""
class BaseClass:
    """A base class."""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'parent.base'), _cribo_f)[1])
    def __init__(self):
        self.base_value = "base"
BaseClass.__module__ = 'parent.base'
parent_base.BaseClass = BaseClass
parent_another = _cribo.types.SimpleNamespace(__name__='parent.another', __doc__='Another module.')
parent.another = parent_another
"""Another module."""
class AnotherClass:
    """Another class."""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'parent.another'), _cribo_f)[1])
    def __init__(self):
        self.another_value = "another"
AnotherClass.__module__ = 'parent.another'
parent_another.AnotherClass = AnotherClass
parent_child = _cribo.types.SimpleNamespace(__name__='parent.child', __doc__='Child module that defines the actual symbols.')
parent.child = parent_child
"""Child module that defines the actual symbols."""
class MyClass:
    """A simple class to test forward references."""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'parent.child'), _cribo_f)[1])
    def __init__(self):
        self.value = 42

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'parent.child'), _cribo_f)[1])
    def __repr__(self):
        return f"MyClass(value={self.value})"
MyClass.__module__ = 'parent.child'
def helper_function():
    """A helper function."""
    return "helper"
helper_function.__module__ = 'parent.child'
parent_child.MyClass = MyClass
parent_child.helper_function = helper_function
parent_subpkg_submodule = _cribo.types.SimpleNamespace(__name__='parent.subpkg.submodule', __doc__='Submodule in subpackage.')
parent_subpkg = _cribo.types.SimpleNamespace(__name__='parent.subpkg', __initializing__=False, __initialized__=False, __path__=[])
parent.subpkg = parent_subpkg
parent_subpkg.submodule = parent_subpkg_submodule
"""Submodule in subpackage."""
class SubpkgClass:
    """A class from subpackage."""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'parent.subpkg.submodule'), _cribo_f)[1])
    def __init__(self):
        self.subpkg_value = "subpkg"
SubpkgClass.__module__ = 'parent.subpkg.submodule'
parent_subpkg_submodule.SubpkgClass = SubpkgClass
def _cribo_init___cribo_710264_parent(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    try:
        _cribo_self.__package__ = 'parent'
        _cribo_self.__doc__ = 'Parent module that re-exports child module symbols.'
        """Parent module that re-exports child module symbols."""
        BaseClass = parent_base.BaseClass
        parent.BaseClass = BaseClass
        AnotherClass = parent_another.AnotherClass
        parent.AnotherClass = AnotherClass
        MyClass = parent_child.MyClass
        parent.MyClass = MyClass
        helper_function = parent_child.helper_function
        parent.helper_function = helper_function
        __cribo_init_result = _cribo_init___cribo_0ac738_parent_subpkg(parent_subpkg)
        for attr in dir(__cribo_init_result):
            if not attr.startswith('_'):
                setattr(parent.subpkg, attr, getattr(__cribo_init_result, attr))
        SubpkgClass = parent.subpkg.SubpkgClass
        parent.SubpkgClass = SubpkgClass
        _cribo_self.child = parent_child
        _cribo_self.another = parent_another
        _cribo_self.base = parent_base
        _cribo_self.BaseClass = BaseClass
        _cribo_self.AnotherClass = AnotherClass
        _cribo_self.MyClass = MyClass
        _cribo_self.__initialized__ = True
        _cribo_self.__initializing__ = False
        return _cribo_self
    except _cribo_base_exception:
        _cribo_self.__initializing__ = False
        raise
parent.__init__ = _cribo_init___cribo_710264_parent
def _cribo_init___cribo_0ac738_parent_subpkg(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    try:
        _cribo_self.__package__ = 'parent.subpkg'
        _cribo_self.__doc__ = 'Subpackage with wildcard export.'
        """Subpackage with wildcard export."""
        SubpkgClass = parent_subpkg_submodule.SubpkgClass
        parent_subpkg.SubpkgClass = SubpkgClass
        _cribo_self.submodule = parent_subpkg_submodule
        _cribo_self.SubpkgClass = SubpkgClass
        _cribo_self.__initialized__ = True
        _cribo_self.__initializing__ = False
        return _cribo_self
    except _cribo_base_exception:
        _cribo_self.__initializing__ = False
        raise
parent_subpkg.__init__ = _cribo_init___cribo_0ac738_parent_subpkg
_cribo_captured['BaseClass'] = BaseClass
_cribo_captured['AnotherClass'] = AnotherClass
_cribo_captured['MyClass'] = MyClass
_cribo_captured['helper_function'] = helper_function
_cribo_captured['SubpkgClass'] = SubpkgClass
"""Test case for forward reference from parent __init__ to child module symbols."""
__cribo_init_result = _cribo_init___cribo_710264_parent(parent)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(parent, attr, getattr(__cribo_init_result, attr))
print(f"BaseClass: {parent.BaseClass}")
print(f"AnotherClass: {parent.AnotherClass}")
print(f"MyClass: {parent.MyClass}")
print(f"SubpkgClass: {parent.SubpkgClass}")
base = parent.BaseClass()
another = parent.AnotherClass()
my = parent.MyClass()
subpkg = parent.SubpkgClass()
print(f"Base value: {base.base_value}")
print(f"Another value: {another.another_value}")
print(f"My value: {my.value}")
print(f"Subpkg value: {subpkg.subpkg_value}")
print("SUCCESS: Forward reference from parent init handled correctly")
child = parent.child
