crates/cribo/tests/snapshots/bundled_code@forward_reference_import_before_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_import_before_init/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        if getattr(module, '_cribo_machinery_loaded', False):
            saved = pristine.get(key)
            if saved is not None:
                module.__dict__.clear()
                module.__dict__.update(saved)
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder.register('mypkg', '_cribo_init___cribo_30661c_mypkg', 'mypkg', True)
_cribo_finder.register('mypkg.exceptions', '_cribo_init___cribo_72b028_mypkg_exceptions', 'mypkg_exceptions', False)
_cribo_finder.register('mypkg.compat', '_cribo_init___cribo_4089db_mypkg_compat', 'mypkg_compat', False)
mypkg_compat = _cribo.types.SimpleNamespace(__name__='mypkg.compat', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mypkg.compat', mypkg_compat)
def _cribo_init___cribo_4089db_mypkg_compat(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypkg'
    self.__doc__ = None
    try:
        from fakejson import JSONDecodeError
        mypkg_compat.JSONDecodeError = JSONDecodeError
    except ImportError:
        JSONDecodeError = _cribo.json.JSONDecodeError
        mypkg_compat.JSONDecodeError = JSONDecodeError
    MutableMapping = _cribo.collections.abc.MutableMapping
    self.MutableMapping = MutableMapping
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypkg_compat.__init__ = _cribo_init___cribo_4089db_mypkg_compat
mypkg = _cribo.types.SimpleNamespace(__name__='mypkg', __initializing__=False, __initialized__=False, __path__=[])
mypkg.compat = mypkg_compat
mypkg_exceptions = _cribo.types.SimpleNamespace(__name__='mypkg.exceptions', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mypkg.exceptions', mypkg_exceptions)
mypkg.exceptions = mypkg_exceptions
def _cribo_init___cribo_30661c_mypkg(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypkg'
    self.__doc__ = None
    global mypkg_exceptions
    mypkg_exceptions = _cribo_init___cribo_72b028_mypkg_exceptions(mypkg_exceptions)
    CustomJSONError = mypkg_exceptions.CustomJSONError
    self.CustomJSONError = CustomJSONError
    self.CustomJSONError = CustomJSONError
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypkg.__init__ = _cribo_init___cribo_30661c_mypkg
def _cribo_init___cribo_72b028_mypkg_exceptions(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypkg'
    self.__doc__ = None
    global mypkg_compat
    mypkg_compat = _cribo_init___cribo_4089db_mypkg_compat(mypkg_compat)
    CompatJSONDecodeError = mypkg.compat.JSONDecodeError
    self.CompatJSONDecodeError = CompatJSONDecodeError
    self.CompatJSONDecodeError = CompatJSONDecodeError

    class BaseException(Exception):
        """Base exception class"""
        pass
    BaseException.__module__ = 'mypkg.exceptions'
    BaseException.__qualname__ = 'BaseException'
    self.BaseException = BaseException

    class CustomJSONError(BaseException, CompatJSONDecodeError):
        """Custom JSON error that inherits from compat's JSONDecodeError"""

        def __init__(self, *args):
            CompatJSONDecodeError.__init__(self, *args)
            BaseException.__init__(self, str(args[0]) if args else "")

        def __reduce__(self):
            return CompatJSONDecodeError.__reduce__(self)
    CustomJSONError.__module__ = 'mypkg.exceptions'
    CustomJSONError.__qualname__ = 'CustomJSONError'
    self.CustomJSONError = CustomJSONError
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypkg_exceptions.__init__ = _cribo_init___cribo_72b028_mypkg_exceptions
__cribo_init_result = _cribo_init___cribo_30661c_mypkg(mypkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(mypkg, attr, getattr(__cribo_init_result, attr))
try:
    raise mypkg.CustomJSONError("Test error", "doc", 42)
except mypkg.CustomJSONError as e:
    print(f"Caught error: {e}")
    print("SUCCESS")
exceptions = mypkg.exceptions
compat = mypkg.compat
