crates/cribo/tests/snapshots/bundled_code@forward_reference_pkg.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_pkg/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('pkg', '_cribo_init___cribo_f70f3a_pkg', 'pkg', True)
_cribo_finder.register('pkg.core', '_cribo_init___cribo_1a829c_pkg_core', 'pkg_core', False)
_cribo_finder.register('pkg.compat', None, None, False, {'BaseClass': 'BaseClass', 'CONSTANT': 'CONSTANT'})
pkg_compat = _cribo.types.SimpleNamespace(__name__='pkg.compat', __doc__='Compat module.')
pkg = _cribo.types.SimpleNamespace(__name__='pkg', __initializing__=False, __initialized__=False, __path__=[])
pkg.compat = pkg_compat
"""Compat module."""
CONSTANT = "compat_value"
class BaseClass:
    """Base class."""
    pass
BaseClass.__module__ = 'pkg.compat'
pkg_compat.CONSTANT = CONSTANT
pkg_compat.BaseClass = BaseClass
pkg_core = _cribo.types.SimpleNamespace(__name__='pkg.core', __initializing__=False, __initialized__=False)
_cribo_finder.bind('pkg.core', pkg_core)
pkg.core = pkg_core
def _cribo_init___cribo_f70f3a_pkg(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'pkg'
    _cribo_self.__doc__ = 'Package that triggers forward reference.'
    global pkg_core
    """Package that triggers forward reference."""
    compat = pkg_compat
    _cribo_self.compat = compat
    pkg_core = _cribo_init___cribo_1a829c_pkg_core(pkg_core)
    core = pkg.core
    _cribo_self.core = core
    pkg_core = _cribo_init___cribo_1a829c_pkg_core(pkg_core)
    get_value = pkg_core.get_value
    _cribo_self.get_value = get_value
    _cribo_self.get_value = get_value
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
pkg.__init__ = _cribo_init___cribo_f70f3a_pkg
def _cribo_init___cribo_1a829c_pkg_core(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'pkg'
    _cribo_self.__doc__ = 'Core module that uses compat at top level.'
    """Core module that uses compat at top level."""
    CONSTANT = pkg_compat.CONSTANT
    pkg_core.CONSTANT = CONSTANT
    BaseClass = pkg_compat.BaseClass
    pkg_core.BaseClass = BaseClass
    _cached_value = f"Cached: {CONSTANT}"
    _cribo_self._cached_value = _cached_value

    class DerivedClass(BaseClass):
        """Class that inherits from compat."""
        pass
    DerivedClass.__module__ = 'pkg.core'
    DerivedClass.__qualname__ = 'DerivedClass'
    _cribo_self.DerivedClass = DerivedClass

    def get_value():
        """Get the cached value."""
        return _cached_value
    get_value.__module__ = 'pkg.core'
    get_value.__qualname__ = 'get_value'
    _cribo_self.get_value = get_value
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
pkg_core.__init__ = _cribo_init___cribo_1a829c_pkg_core
"""Test that should fail with forward reference __cribo_init issue."""
__cribo_init_result = _cribo_init___cribo_f70f3a_pkg(pkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(pkg, attr, getattr(__cribo_init_result, attr))
print(f"Value: {pkg.get_value()}")
print("Test completed")
core = pkg.core
compat = pkg.compat
